fix(focus): remove overflow: hidden to prevent truncating of buttons shadow

--- a/src/components/container/styles.module.scss
+++ b/src/components/container/styles.module.scss
@@ -1,6 +1,5 @@
 .container {
 	width: 100%;
-	overflow: hidden;
 	margin-inline: auto;
 	padding-inline: t2c(16, xs);
 }
